Bug 352693 - Akonadi ical calendar file resource uses broken path uri
Summary: Akonadi ical calendar file resource uses broken path uri
Status: RESOLVED FIXED
Alias: None
Product: kresources
Classification: Unmaintained
Component: local (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 352942 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-14 14:06 UTC by Bogdan Mihaila
Modified: 2015-09-27 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bogdan Mihaila 2015-09-14 14:06:48 UTC
When configuring a path for a calendar file on disk the akonadi ical file resource takes the path literally with protocol prefix and appends that to the home directory. It is thus impossible to specify a path for a calendar file.

Note that this is a regression that only occurred since about one week after updating to the current git version of akonadi/kdepim from Kubuntu continuous integration. As of source version from today (14.09.2015) the bug still exists.

Reproducible: Always

Steps to Reproduce:
1. Add a new ICal calendar file resource using Akonadi Console
2. input a path and filename for the resource file, e.g. in your home directory: "/home/$USER/blatestfile" (note that the file does not have to exist!)
3. click ok

Actual Results:  
A file "blatestfile" is created but in the path "/home/$USER/file:/home/$USER/blatestfile"
Note the "file:" protocol component in the path. 

Expected Results:  
A file "blatestfile" should be created or used if already existent with the path of "/home/$USER/blatestfile"

It seems as if the path is taken literally as a string with the "file:" protocol part included and appended to you home directory.
Comment 1 Sergio Martins 2015-09-27 12:04:00 UTC
*** Bug 352942 has been marked as a duplicate of this bug. ***
Comment 2 Sergio Martins 2015-09-27 12:06:53 UTC
Git commit 1612e91eb5540fc25e4fa4a7bfe28d3512439318 by Sergio Martins.
Committed on 27/09/2015 at 12:02.
Pushed by smartins into branch 'Applications/15.08'.

ical: Fix resource It wasn't creating the file with the correct path

Was creating the resource in a folder named file:

M  +1    -1    resources/shared/singlefileresource/singlefileresource.h

http://commits.kde.org/kdepim-runtime/1612e91eb5540fc25e4fa4a7bfe28d3512439318