ical: Fix resource It wasn't creating the file with the correct path

Was creating the resource in a folder named file:
BUG: 352693